--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "assignment-3-pgmartin11",
   "version": "1.0.0",
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
